--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-size: contain;
     background-color: hsl(225, 100%, 94%);
     font-family:'Red Hat Display';
+    margin: 0;
 }
 
 .container{
